--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
+    "qrcodejs": "^1.0.0",
+    "qrious": "^4.0.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
